constant scrollbar prevents ui jerks

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -4,7 +4,8 @@
 
 body {
     @apply bg-slate-100;
-    @apply m-5
+    @apply m-5;
+    @apply overflow-y-scroll;
 }
 
 @layer components {
